# gi-toolkit

./: .gitignore  Cargo.toml  README.md  build.ps1
assets/: game_path.txt
assets/switch/: sdk_pkg_version
bilibili_login/: Cargo.toml
bilibili_login/src/: lib.rs
hutao_minhook/: Cargo.toml
hutao_minhook/src/: lib.rs
src/: client_switch.rs  hutao_config.rs  hutao_launcher.rs  hutao_minhook.rs  launcher.rs  main.rs  process_utils.rs  widget_test.rs
