[package]
name = "gi-toolkit"
version = "1.1.2"
edition = "2024"

[dependencies]
min_hook_rs = "2.1"
egui = "0.32"
eframe = "0.32"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }
serde_json = "1"

[workspace]
members = [
    "hutao_minhook",
]